doc/2.4/_sources/reference/generated/ak.forms.RecordForm.rst.txt
ak.forms.RecordForm
-------------------

.. py:module: ak.forms.RecordForm

Defined in `awkward.forms.recordform <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/recordform.py>`__ on `line 20 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/recordform.py#L20>`__.

.. py:class:: ak.forms.RecordForm(self, contents, fields, *, parameters=None, form_key=None)



.. _ak-forms-recordform-is_record:

.. py:attribute:: ak.forms.RecordForm.is_record
    :value: True



.. _ak-forms-recordform-contents:

.. py:attribute:: ak.forms.RecordForm.contents



.. _ak-forms-recordform-fields:

.. py:attribute:: ak.forms.RecordForm.fields



.. _ak-forms-recordform-copy:

.. py:method:: ak.forms.RecordForm.copy(self, contents=UNSET, fields=UNSET, *, parameters=UNSET, form_key=UNSET)



.. _ak-forms-recordform-simplified:

.. py:method:: ak.forms.RecordForm.simplified(cls, contents, fields, *, parameters=None, form_key=None)



.. _ak-forms-recordform-is_tuple:

.. py:attribute:: ak.forms.RecordForm.is_tuple



.. _ak-forms-recordform-__repr__:

.. py:method:: ak.forms.RecordForm.__repr__(self)



.. _ak-forms-recordform-index_to_field:

.. py:method:: ak.forms.RecordForm.index_to_field(self, index)



.. _ak-forms-recordform-field_to_index:

.. py:method:: ak.forms.RecordForm.field_to_index(self, field)



.. _ak-forms-recordform-has_field:

.. py:method:: ak.forms.RecordForm.has_field(self, field)



.. _ak-forms-recordform-content:

.. py:method:: ak.forms.RecordForm.content(self, index_or_field)



.. _ak-forms-recordform-_to_dict_part:

.. py:method:: ak.forms.RecordForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-recordform-type:

.. py:attribute:: ak.forms.RecordForm.type



.. _ak-forms-recordform-__eq__:

.. py:method:: ak.forms.RecordForm.__eq__(self, other)



.. _ak-forms-recordform-purelist_parameters:

.. py:method:: ak.forms.RecordForm.purelist_parameters(self, *keys)



.. _ak-forms-recordform-purelist_isregular:

.. py:attribute:: ak.forms.RecordForm.purelist_isregular



.. _ak-forms-recordform-purelist_depth:

.. py:attribute:: ak.forms.RecordForm.purelist_depth



.. _ak-forms-recordform-is_identity_like:

.. py:attribute:: ak.forms.RecordForm.is_identity_like



.. _ak-forms-recordform-minmax_depth:

.. py:attribute:: ak.forms.RecordForm.minmax_depth



.. _ak-forms-recordform-branch_depth:

.. py:attribute:: ak.forms.RecordForm.branch_depth



.. _ak-forms-recordform-dimension_optiontype:

.. py:attribute:: ak.forms.RecordForm.dimension_optiontype



.. _ak-forms-recordform-_columns:

.. py:method:: ak.forms.RecordForm._columns(self, path, output, list_indicator)



.. _ak-forms-recordform-_prune_columns:

.. py:method:: ak.forms.RecordForm._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-recordform-_select_columns:

.. py:method:: ak.forms.RecordForm._select_columns(self, match_specifier)



.. _ak-forms-recordform-_column_types:

.. py:method:: ak.forms.RecordForm._column_types(self)



.. _ak-forms-recordform-__setstate__:

.. py:method:: ak.forms.RecordForm.__setstate__(self, state)



.. _ak-forms-recordform-_expected_from_buffers:

.. py:method:: ak.forms.RecordForm._expected_from_buffers(self, getkey, recursive)

